# 2-DD-

./: .gitignore  7.2.26.5.05  CMakeLists.txt  README.md  README_IMGUI.md  _analyze.py  agentB_analyze_v2.py  agentB_v4.py  analyze_re.py  deep_analyze.py  desktop.ini  fix_unknown.py  niche_details.py  pattern_extractor.py  patterns_extracted.json  sc_protocol_analysis.py  temp_scan.py  unpack.py
2-gui/: COMPARISON.md  README.md
2-gui/native-gui/: CMakeLists.txt  CMakeLists_minimal.txt
2-gui/native-gui/imgui/: CMakeLists.txt
2-gui/native-gui/src/: file_loader.cpp  file_loader.h  main.cpp  main_simple.cpp
2-gui/web-gui/: backend.py  index.html
build_scripts/: pe_analyzer.py
build_simple/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  LiberTeaBrowser.sln  LiberTeaBrowser.vcxproj  LiberTeaBrowser.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_simple/imgui/: cmake_install.cmake  imgui.vcxproj  imgui.vcxproj.filters  imgui_backend.vcxproj  imgui_backend.vcxproj.filters
data/: patterns_extracted.json
logs/: infer_decompiler_fixes.txt
resweep/: resweep_analyzer.ps1  resweep_analyzer.py  resweep_supplement.py
scripts/: agent1_expand.ps1  agent1_final.ps1  agent1_scan.ps1  analyze_obfuscated.py  decode_obfuscated.py  decode_obfuscated_v2.py  dynamic_analysis.py  hyper1_analysis.py  hyper1_append.py  hyper1_expanded.py  hyper2_analyze.py
scripts/analysis/: pattern_scanner.py  supplement_analyze.py
scripts/decompressor/: unpack2.py
scripts/extractors/: deep_dive.py  extract_analysis.py  full_extract.py  libertea_tech_breakdown.py
scripts/hyper3/: extract_structures.py  extract_structures2.py
scripts/scratch/: agentB_analyze.py  agentB_analyze_v3.py  brute_offset.py  build_string_map.py  check_offset.py  check_pe.py  check_pe2.py  decomp_correct.py  diag_bits.py  disasm_decomp.py  extract_strings.py  final_analysis.py  full_disasm.py  try_offsets.py  verify_offset.py
src/: browser.h  file_loader.h
